RISC-V: compiler/vectorapi/VectorGatherMaskFoldingTest.java fails when using RVV

XMLWordPrintable

    • b02
    • riscv
    • linux

        Hi, we are experiencing test failures in test/hotspot/jtreg/compiler/vectorapi/VectorGatherMaskFoldingTest.java on Banana Pi BPI-F3 board (has RVV1.0), see jbs issue for exception information.
        ```
        Standard Output ---------------
        TestVM main() called - about to run tests in class compiler.vectorapi.VectorGatherMaskFoldingTest For random generator using seed: -41831637119400550
        To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-41831637119400550" to command line.
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGILL (0x4) at pc=0x0000003f7c1956f4, pid=1930385, tid=1930386
        #
        # JRE version: OpenJDK Runtime Environment (23.0) (build 23-internal-adhoc.zifeihan.jdk)
        # Java VM: OpenJDK 64-Bit Server VM (23-internal-adhoc.zifeihan.jdk, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-riscv64)
        # Problematic frame:
        # J 1535 c2 compiler.vectorapi.VectorGatherMaskFoldingTest.testOneDoubleVectorLoadGather()V (55 bytes) @ 0x0000003f7c1956f4 [0x0000003f7c195640+0x00000000000000b4]
        #
        # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        Unsupported internal testing APIs have been used.

        # An error report file with more information is saved as:
        # /home/zifeihan/jdk/build/linux-riscv64-server-release/test-support/jtreg_test_hotspot_jtreg_compiler_vectorapi_VectorGatherMaskFoldingTest_java/scratch/0/hs_err_pid1930385.log
        [14.586s][warning][os] Loading hsdis library failed
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #
        WARNING: Using incubator modules: jdk.incubator.vector

        Command Line:
        ```

              Assignee:
              Gui Cao
              Reporter:
              Gui Cao
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: