8333652: RISC-V: compiler/vectorapi/VectorGatherMaskFoldingTest.java fails when using RVV

Backport-of: ce5727df4436425b24b89f24c6e6b708575ec7c6